# RISE_Meeting

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: queries_100.jsonl
scripts/: build_bm25_index.py  build_filename_docid_map.py  build_uac_corpus.py  evaluate_inquiries.py  judge.py  run_dci.py  run_retrieval_agent.py  run_rise.py  summarize_runs.py
scripts/structured/: build_structured_corpus.py  run_full_corpus.py  section_one_doc.py
services/frontend/: __init__.py
services/frontend/app/: main.py
src/rise/: agent.py  api_retry.py  bcp_retrieval_agent.py  console.py  corpus_fs_lookup.py  dci_artifacts.py  dci_native.py  decompose.py  protocol.py  retrieval.py  rise_agent.py  run_storage.py  tools.py  trajectory.py  uac_corpus.py  uac_extract.py  uac_metadata.py  uac_pipeline.py  uac_workspace.py
src/rise/inquiry/: __init__.py  discovery.py  evaluation.py  intents.py  investigation.py  llm.py  models.py  people.py  response_contracts.py  service.py  (+5 more)
tests/: test_build_uac_corpus_cli.py  test_console.py  test_frontend_api.py  test_hkust_provider.py  test_inquiry_discovery.py  test_inquiry_evaluation.py  test_inquiry_intents.py  test_inquiry_investigation.py  test_inquiry_llm.py  test_inquiry_models.py  test_inquiry_people.py  test_inquiry_response_contracts.py  test_inquiry_service.py  test_inquiry_store.py  test_inquiry_summaries.py  test_inquiry_topics.py  test_inquiry_verification.py  test_run_storage.py  test_source_pdfs.py  test_uac_corpus.py  test_uac_extract.py  test_uac_metadata.py  test_uac_pipeline.py  test_uac_workspace.py
(+3 files in other folders)
